--- a/src/requirements.in
+++ b/src/requirements.in
@@ -9,6 +9,7 @@ requests == 2.32.4
 more-ds == 0.0.6
 orjson == 3.10.18
 whitenoise == 6.9.0
+azure-storage-blob == 12.26.0
 
 # Monitoring
 azure-monitor-opentelemetry == 1.6.10
